# algorithmania

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/cli/app/: CLIApp.cpp  CLIApp.hpp
src/core/: CMakeLists.txt  Core.cpp  Core.hpp
src/gui/: CMakeLists.txt
src/gui/app/: GUIApp.cpp  GUIApp.hpp
